css/style.css
 
html, body{
    box-sizing: border-box; 
    margin: 0;
    padding: 0;
    font-family: 'Roboto', sans-serif;
}
body { 
     

    /* display: flex;
    justify-content: center;
    align-items: center; */
   

    /* background-color: purple; */
} 
header {
    /* height: 100%; */
    width: 100%;
    height:100vh;
    background: url(/coffee-house-scene.png);
    background-size: cover; 
    background-attachment:fixed;
    background-position: center;
    background-repeat: no-repeat;

}

/* .about {
    
    width: 100%;
    margin: 4 em auto;
    font-size: 20px;
    line-height: 30px;
    text-align: center;
    
} */

main{
    display: grid;
    place-items: center;

}
.about{
    display: flex; 
    justify-content: center;
    align-items: center;
    text-align: center;
    flex-direction: column;
    width: 70%;
    padding: 10px, 20px;
    border: 1px solid black;

}
.title {
    position:fixed;
    color: white;
    background-color: purple;
    margin-left: 20px;
    margin-bottom: 10px;
}
nav{
    position: fixed;
    width: 100%;
    
} 
nav ul {
    list-style: none;
    color: white;
    background-color: purple;
    overflow: hidden;
    padding: 0;
    margin:0;
    text-align: center;
}

nav ul li {
    display: inline-block;
    padding: 30px;
}


.navBarLinks li a{
    color: white;
    font-size: 20px;
    /* justify-content: space-between; */
    letter-spacing: 2px;


} 
.menu{
    display: flex;
    gap: 20px;
}
.row{
    display: flex;
    flex-direction: row;
    justify-content: center;


}
.card{
    width: 20%;
    background: lightcyan;
    border: 1px solid black;
    margin-bottom: 50px;
    transition: 0.3s;

}
.card-header{
    text-align: center;
    padding: 50px 10px;
    background: linear-gradient(to right, magenta, #ff4b2b);
    color: white;

}

.card-body{
    padding: 20px 50px;
    text-align: center;


}

.card:hover{
    transform: scale(1.05);
    box-shadow: 0 0 40px -10px rgba(0,0,0,0.25);
}








/* .nav{
    display: flex;
    justify-content: space-between; 
   

} */

/* .title{
    font-size: 2 rem;
    text-align: center;
    font-weight: 400;
    flex: 2 1 50px;

} */
/* .navBarLinks {
    flex: 5;
    display: flex;
    justify-content: space-around;

} */
/* .navBarLinks li{
    list-style: none;
    display: inline-block;
    padding: 20px 30px;
    background-color: transparent;
    
   
}
.navBarLinks li a{
    color: black;

}   */
/* li, a{
    font-weight: 1000;
    font-size: 16 px;
    color: #edf0f1;
} */
/* body { */
    /* display: flex;
    justify-content: center;
    align-items: center; */
   

    /* background-color: purple; */
/* } */
/* .header { */
    /* width: 100%;
    height: 100px;
    display: flex;
    /* justify-content: flex;
    align-items: center;
    position:fixed; */
    /* z-index: 99;
    padding: 20px 20%;
    background-color: blueviolet;
    box-shadow: 0 0 10px #000; */

/* }  */

/* .title {
   justify-content: left; 
    
}

li, a{
    font-weight: 1000;
    font-size: 16 px;
    color: #edf0f1;
}
.navBarLinks {
    list-style: none;
    
   
}

.navBarLinks li{
    display: inline-block;
    padding: 20px 50px;
    background-color: blueviolet;
    

}
.navBarLinks li a{
    color: black;

}  */


/* .bg{
    display: grid;
    justify-content: center;
    place-items: center;
    max-width: 100%;
    padding:20px;
    margin:20px;
    border: black;
    border-spacing: 10px;
}
img {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    /* opacity: 0.8; */
/* }  */
/* } */




    
    


/* .animalSerotonin { */
    /* margin: auto;
    box-sizing: border-box; */
    /* display:flex;
    justify-content: left;
    align-items: left;
    background-color: blue;

    
} 


#catPic{
   
    max-width: 300px;
    max-height: 300px;
    
}
  
#dogPic{
   
    max-width: 300px;
    max-height: 300px;
    
} */

